# tequila

./: .env.example  alembic.ini  main.py  pyproject.toml  pytest_clean.txt  pytest_unit.txt  test_results.txt
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_sprint02_indexes.py  0003_sprint03_agents.py  0004_sprint04_agent_full.py  0005_sprint05_messages_full.py  0006_sprint06_web_cache.py  0007_sprint07_audit_log.py  0008_sprint08_workflows.py  0009_sprint09_memory.py  0010_sprint10_knowledge_sources.py  0011_sprint11_memory_graph.py  0012_td_s3_auto_recall_index.py  0013_td_s5_check_constraints.py  0014_sprint12_plugins.py  0015_sprint13_scheduler.py  0016_sprint14_skills.py  0017_sprint14b.py  0018_entity_version_column.py  0019_sprint15_files.py
app/: __init__.py  config.py  constants.py  exceptions.py  paths.py
app/agent/: __init__.py  context.py  escalation.py  models.py  prompt_assembly.py  skills.py  soul.py  soul_editor.py  store.py  sub_agent.py  turn_loop.py
app/api/: __init__.py  app.py  deps.py  tasks.py  ws.py
app/audit/: __init__.py  log.py  logger.py  sinks.py
app/auth/: __init__.py  api.py  app_lock.py  encryption.py  providers.py
app/backup/: __init__.py
app/budget/: __init__.py
app/db/: __init__.py  connection.py  schema.py  web_cache.py
app/files/: __init__.py  cleanup.py  export.py  models.py  store.py
app/gateway/: __init__.py  buffer.py  events.py  router.py
app/knowledge/: __init__.py  embeddings.py  graph.py  vault.py
app/memory/: __init__.py  audit.py  entities.py  entity_store.py  extraction.py  lifecycle.py  models.py  recall.py  store.py
app/notifications/: __init__.py
app/plugins/: __init__.py  api.py  base.py  discovery.py  models.py  registry.py  store.py
app/providers/: __init__.py  anthropic.py  base.py  circuit_breaker.py  mock.py  ollama.py  openai.py  registry.py
app/scheduler/: __init__.py  api.py  cronparser.py  engine.py  models.py  store.py
app/sessions/: __init__.py  branching.py  export.py  messages.py  models.py  policy.py  store.py
app/tools/: __init__.py  executor.py  registry.py
app/update/: __init__.py  checker.py  models.py  service.py
app/workflows/: __init__.py  api.py  models.py  runtime.py  store.py
data/: tequila.db
docs/: README.md  architecture.md  module-map.md
docs/startup_scripts/: continuation_agent_prompt.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: README.md  conftest.py  reset_helpers.py
(+267 files in other folders)
