[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "tequila"
version = "0.1.0"
description = "Tequila v2 — local-first personal AI agent platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "cryptography>=42.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
session = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "asgi-lifespan>=2.1",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
